[b]Version 0.6.0rc3[/b] (not released yet):

(2008-02-29)
 * Added the Macedonian translation by Marko Doda <mark0d0da@gmail.com>
 * Added the Basque translation by Piarres Beobide <pi@beobide.net>

(2008-02-26)
 * Add the hue filter if the software equalizer is enabled. This allows to
   change the hue in the video equalizer.
 * Allow the software equalizer to be used with gl/gl2. Note: it won't work
   with gl or gl2 but it will work with gl:yuv=3 and gl2:yuv=3.

(2008-02-25)
 * Bugfix: mark the right current item in the playlist if deleted an item
   above it. Patch by corentin1234.

(2008-02-23)
 * Added two new options in the Subtitles menu: "Enable closed caption" and
   "Forced subtitles only". These two options are global because they are
   intended for DVDs. None of these two options have been tested!

(2008-02-17)
 * On startup smplayer will create a lock file (smplayer_init.lock in the
   config directory) which will be removed once smplayer has been initialized.
   If another instance finds that file it will wait until the file is deleted
   (or 10 seconds have passed). 
   The reason for this is to give the first instance some time to proper 
   initialize in case several instances were launched at the same time (Windows
   does it if you select to "Enqueue in smplayer" multiple files).

(2008-02-16)
 * New experimental code. New class "SMPlayer" which initializes the global
   objects and can parse the arguments. There's also a new main (main2.cpp).
   It's possible this could have broken something!


[b]Version 0.6.0rc2[/b]:

(2008-02-11)
 * Added gl:yuv=3 and gl2:yuv=3 to the list of video drivers.

(2008-02-09)
 * (Windows) Screensaver: set the timeout for lowpower, poweroff and 
   screensaver before playing, and restore on stop.
 
(2008-02-08)
 * (Windows) Bugfix: don't try to convert to 8.3 short names files that
   don't exist.
 
(2008-02-07)
 * The script create_deb should compile and create the package much faster.